# Lumengate

./: .env.example  .gitignore  Cargo.toml  LUMENGATE_ENGINEERING_BIBLE.md  MASTER_PRODUCT_AUDIT.md  PRODUCTION_BUG_REPORT.md  README.md  RECOVERY_HANDOFF.md  ROOT_CAUSE_SYNC_REPORT.md  deployments.json  package-lock.json  package.json  render.yaml
app/: .env.example  deployments.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
app/e2e/: confidential-token.spec.ts  proof-recovery.spec.ts  smoke.spec.ts
app/scripts/: ct_register_account.mjs  test-sync-prove.mjs  test_deploy_relayer.mjs  verify-nullifier-read.mjs  verify-receipt-rpc.mjs
app/src/: App.tsx  index.css  vite-env.d.ts
app/test/: assetAmount.test.mjs  assetScope.test.mjs  confidentialAssetConfig.test.mjs  credentialProof.test.mjs
circuits/lumengate/: Nargo.toml
circuits/proof_of_funds/: Nargo.toml
contracts/auditor_registry/: Cargo.toml
contracts/confidential_auditor/: Cargo.toml
contracts/confidential_auditor/src/: lib.rs  test.rs
contracts/issuer_registry/: Cargo.toml
contracts/issuer_registry/src/: lib.rs  test.rs
contracts/issuer_registry/test_snapshots/test/: add_and_authorize_issuer.1.json  duplicate_issuer_rejected.1.json  get_pubkey_missing_returns_none.1.json  revoke_issuer.1.json
contracts/policy_verifier/: Cargo.toml
contracts/policy_verifier/src/: lib.rs  test.rs
contracts/policy_verifier/test_snapshots/test/: get_verifier_unknown_policy_panics.1.json  policy_verifier_constructs.1.json  scoped_nullifier_keys_are_independent.1.json  set_eligible_flag_roundtrip.1.json
contracts/rwa_token/: Cargo.toml
docs/: ARCHITECTURE_TRUTH.md  CONFIDENTIAL_TOKENS_ON_STELLAR.md  CURRENT_ARCHITECTURE.md  ENVIRONMENT.md  FINAL_PROJECT_IMPLEMENTATION_REPORT.md  FINAL_TEST_REPORT.md  G1_MSM_BENCHMARK.md  IMPLEMENTATION_STATUS_REPORT.md  LUMENGATE_MASTER_DOCUMENTATION.md  PASSKEY_SMART_ACCOUNT_IMPLEMENTATION_GUIDE.md  PRODUCT_POLISH_FINAL_REPORT.md  PROJECT_HISTORY.md  README.md  SECURITY_DETECTORS_REPORT.md  TEST_RESULTS.md
issuer-service/: .env.example  package-lock.json  package.json  server.js
scripts/: api_integration_test.sh  bootstrap_faucet_treasury.mjs  bootstrap_lumengate_eurc.mjs  bootstrap_usdc_faucet_treasury.mjs  build_circuit.sh  build_contracts.sh  build_pof_circuit.sh  complete_deploy.sh  compute_note_root.js  compute_revocation_root.js  ct_auditor_point.cjs  ct_integration_test.sh  ct_passkey_validation.mjs  demo-ttl-check.sh  deploy_confidential_asset.sh  deploy_confidential_token.sh  deploy_external_verifiers.sh  deploy_hardened_external.sh  deploy_hardened_phase0.sh  deploy_incremental.sh  deploy_passkey_stack.sh  deploy_sac_admin.sh  deploy_testnet.sh  deploy_v3_contracts.sh  diagnose_usdc_faucet.mjs  fetch_crs_assets.mjs  freighter_settle_node.mjs  freighter_usdc_e2e.sh  fund_usdc_testnet.mjs  g1_msm_benchmark.sh  generate_pof_prover_toml.js  generate_prover_toml.js  git-push.sh  integration_e2e.sh  publish_git_history.mjs  register_ed25519_issuer.sh  register_vk_v3.sh  regression_test.sh  reset_revocation_root.sh  run_verified_tests.sh  (+16 more)
(+325 files in other folders)
